HelloUltraviolet/Fixtures/RejectedSource/Parallelism/CaptureSemanticsDiagnostics/Expected.uv
//! Expected diagnostic metadata for the CaptureSemanticsDiagnostics rejected-source specimen.

expectedDiagnostic("E-CON-0151", "diagnostics.20.CaptureSemantics")
